legends fix: broken styles after Card refactoring

--- a/src/legends/modules/legends/components/Card/Card.module.scss
+++ b/src/legends/modules/legends/components/Card/Card.module.scss
@@ -29,3 +29,9 @@
   align-items: center;
   margin-bottom: 1rem;
 }
+
+.button {
+  @include primary-button;
+  font-size: 1rem;
+  color: $secondaryAccent;
+}
